# zhenerals

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
game/: BIGFile.cpp  Battlefield.cpp  Battlefield.h  BattlefieldFactory.cpp  BattlefieldFactory.h  CSFFile.cpp  CSFFile.h  Cache.h  Color.cpp  Color.h  Config.h  Dimensions.h  EventDispatcher.cpp  EventDispatcher.h  Game.cpp  Game.h  Geometry.h  InflatingStream.cpp  InflatingStream.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  Main.cpp  Map.cpp  Map.h  MappedImageINI.cpp  MappedImageINI.h  MemProfiling.cpp  MemoryViewStream.cpp  MemoryViewStream.h  MurmurHash.cpp  MurmurHash.h  ObjectLoader.cpp  ObjectLoader.h  ResourceLoader.cpp  ResourceLoader.h  Script.cpp  Script.h  StringLoader.cpp  (+11 more)
game/GUI/: Button.cpp  Button.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  Label.cpp  Label.h  Overlay.cpp  Overlay.h  Window.cpp  Window.h
game/GUI/drawing/: RenderListFactory.cpp  RenderListFactory.h
game/GUI/hosts/: EventDefaults.cpp  EventDefaults.h  MainMenu.cpp  MainMenu.h
game/GUI/wnd/: DrawData.cpp  DrawData.h  Font.cpp  Font.h  Layout.cpp  Layout.h  ScreenRect.cpp  ScreenRect.h  TextColor.cpp  TextColor.h  Window.cpp  Window.h  WindowAndLayout.cpp  WindowAndLayout.h
game/audio/: Backend.cpp  Backend.h  Playback.cpp  Playback.h  SoundData.cpp  SoundData.h
game/docs/: COORDS.md
game/formats/: AudioFile.cpp  AudioFile.h  BIGFile.cpp  BIGFile.h  CSFFile.cpp  CSFFile.h  DDSFile.cpp  DDSFile.h  Dict.cpp  Dict.h  MAPFile.cpp  MAPFile.h  TGAFile.cpp  TGAFile.h  W3DFile.cpp  W3DFile.h  WNDFile.cpp  WNDFile.h
game/gfx/: Camera.cpp  Camera.h  FrameDisposable.cpp  FrameDisposable.h  Frustum.cpp  Frustum.h  HostTexture.cpp  HostTexture.h  Model.cpp  Model.h  ModelCache.cpp  ModelCache.h  TextureCache.cpp  TextureCache.h  TextureLoader.cpp  TextureLoader.h  TextureLookup.cpp  TextureLookup.h  VkExt.h
game/gfx/font/: Atlas.cpp  Atlas.h  FontManager.cpp  FontManager.h  TextureGenerator.cpp  TextureGenerator.h
game/inis/: INIFile.cpp  INIFile.h  MappedImageINI.cpp  MappedImageINI.h  ObjectsINI.cpp  ObjectsINI.h  SoundEffectsINI.cpp  SoundEffectsINI.h  TerrainINI.cpp  TerrainINI.h  WaterINI.cpp  WaterINI.h
game/objects/: Attributes.h  Drawing.h  Instance.cpp  Instance.h  InstanceFactory.cpp  InstanceFactory.h  Modules.h  Object.cpp  Object.h
game/rendering/: BattlefieldRenderer.cpp  BattlefieldRenderer.h  InstanceRenderer.cpp  InstanceRenderer.h  LineRenderer.cpp  LineRenderer.h  MapRenderer.cpp  MapRenderer.h  ModelRenderer.cpp  ModelRenderer.h
game/tests/: GameTest_Map.cpp  GameTest_ObjectsINI.cpp  GameTest_Textures.cpp  GameTest_W3D.cpp  Test_AudioFile.cpp  Test_BIGFile.cpp  Test_CSFFile.cpp  Test_DDSFile.cpp  Test_Dict.cpp  Test_Font.cpp  Test_Frustum.cpp  Test_Geometry.cpp  Test_MappedImageINI.cpp  Test_MemoryViewStream.cpp  Test_MurmurHash.cpp  Test_ObjectsINI.cpp  Test_ResourceLoader.cpp  Test_SoundEffectsINI.cpp  Test_TGAFile.cpp  Test_TerrainINI.cpp  Test_WNDFile.cpp  Test_WaterINI.cpp
game/tests/resources/BIGFile/: stuff.big
game/tests/resources/CSFFile/: strings.csf
game/tests/resources/DDSFile/: dxt1.dds  dxt5.dds
game/tests/resources/Dict/: some.dict
game/tests/resources/MappedImageINI/: textures.ini
game/tests/resources/ObjectsINI/: objects.ini
game/tests/resources/ResourceLoader/: other_stuff.big  stuff.big
game/tests/resources/SoundEffectsINI/: effects.ini
game/tests/resources/TGAFile/: pixels24.tga  pixels32.tga
game/tests/resources/TerrainINI/: terrain.ini
game/tests/resources/WNDFile/: v2.wnd
game/tests/resources/WaterINI/: water.ini
game/vugl/: README.md  vma_loader.cpp  vugl_bindable_resource.h  vugl_combined_sampler.cpp  vugl_combined_sampler.h  vugl_command_buffer.cpp  vugl_command_buffer.h  vugl_command_pool.cpp  vugl_command_pool.h  vugl_compute_pipeline.cpp  vugl_compute_pipeline.h  vugl_context.cpp  vugl_context.h  vugl_descriptor_set.cpp  vugl_descriptor_set.h  vugl_device_sampler.cpp  vugl_device_sampler.h  vugl_drawer.h  vugl_dynamic.h  vugl_element_buffer.cpp  vugl_element_buffer.h  vugl_frame.cpp  vugl_frame.h  vugl_pipeline.cpp  vugl_pipeline.h  vugl_pipeline_setup.cpp  vugl_pipeline_setup.h  vugl_render_pass.cpp  vugl_render_pass.h  vugl_render_pass_setup.cpp  vugl_render_pass_setup.h  vugl_resource_allocator.cpp  vugl_resource_allocator.h  vugl_sampler.cpp  vugl_sampler.h  vugl_texture.cpp  vugl_texture.h  vugl_uniform_buffer.cpp  vugl_uniform_buffer.h  vugl_upload_sampler.cpp  (+2 more)
resources/: game.rc  zh.dds
resources/fonts/: LICENSE
resources/shaders/: compile.sh  lines.frag  lines.vert  model.frag  model.vert  patch.frag  patch.vert  terrain.frag  terrain.vert  ui.frag  ui.vert  ui_font.frag  ui_font.vert  ui_texture.frag  water.frag  water.vert
tools/: BIG.cpp  decompress.cpp  mapdump.cpp  w3ddump.cpp  w3dview.cpp
